kube/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
  namespace: haddock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      labels:
        app: redis-service
    spec:
      containers:
      - name: redis-service
        image: redis:8
---
